--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "types",
     "web-types.json"
   ],
+  "engines": {
+    "node": ">=12.20.1"
+  },
   "typings": "types/index.d.ts",
   "scripts": {
     "bootstrap": "yarn || npm i",
